Fix Enumerator::ArithmeticSequence#last with rational ends and step

Call +, *, - methods to determine the last value, instead of using
rb_int_plus, rb_int_mul, and rb_int_minus.

There are additional rb_int_* calls in the arith_seq_last function,
I'm not sure whether they should also be switched to method calls
or not.

Fixes [Bug #17218]