test/ruby/test_arithmetic_sequence.rb
@@ -264,6 +264,11 @@ class TestArithmeticSequence < Test::Unit::TestCase
     assert_instance_of Integer, res[1]
   end
 
+  def test_last_with_rational_ends_and_step
+    res = (1.0997r..1.1r).step(0.0001r)
+    assert_equal(1.1r, res.last)
+  end
+
   def test_to_a
     assert_equal([1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 1.step(10).to_a)
     assert_equal([1, 3, 5, 7, 9], 1.step(10, 2).to_a)
